fix for alignment of side bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,7 +203,7 @@ body {
 
 #sidebar {
 	float: right;
-	width: 340px;
+	width: 300px;
 	background-color: #ccc;
 	margin:0px;	
 	margin-right: 85px;
